crates/parser/src/snapshots/parser__tests__err_test@0048_assume_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume a\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0048_assume_no_body.ath
---
ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
        WHITESPACE "\n"
error 9: expected body for assumption

