crates/parser/src/snapshots/parser__tests__err_test@0053_let_rec_ded_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec { a := b; c := d }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0053_let_rec_ded_no_body.ath
---
LET_REC_DED
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_REC_PART
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  LET_REC_PART
    SEMI ";"
    WHITESPACE " "
    IDENTIFIER
      IDENT "c"
      WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "d"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 26: Expected a letrec body

