crates/parser/src/snapshots/parser__tests__err_test@0055_let_expr_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "let { a := b; c := d }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0055_let_expr_no_body.ath
---
LET_EXPR
  LET_KW "let"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  LET_PART
    SEMI ";"
    WHITESPACE " "
    IDENT_PAT
      IDENTIFIER
        IDENT "c"
        WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "d"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 23: Expected a let body

