crates/parser/src/snapshots/parser__tests__err_test@0060_proof_by_contra_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "suppose-absurd\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0060_proof_by_contra_no_phrase.ath
---
PROOF_BY_CONTRA_DED
  SUPPOSE_ABSURD_KW "suppose-absurd"
  WHITESPACE "\n"
error 15: expected absurd hypothesis for proof by contradiction
error 15: expected body for proof by contradiction

